# cuda-collatz

./: CMakeLists.txt  README.md
include/collatz/: big_uint.cuh  collatz_kernel.cuh
src/: collatz_kernel.cu  main.cu
tests/: test_big_uint.cu  test_collatz_kernel.cu
